New entries should be added at the top

2004-07-13 Modified line collections to handle arbitrary length
           segments for each line segment. - JDH

2004-07-13 Fixed problems with image extent and origin -
           set_image_extent deprecated.  Use imshow(blah, blah,
           extent=(xmin, xmax, ymin, ymax) instead  - JDH

2004-07-12 Added prototype for new nav bar with codifed event
           handling.  Use mpl_connect rather than connect for
           matplotlib event handling.  toolbar style determined by rc
           toolbar param.  backend status: gtk: prototype, wx: in
           progress, tk: not started - JDH

2004-07-11 backend_gtk.py: use builtin round() instead of redefining it.
           - SC

2004-07-10 Added embedding_in_wx3 example - ADS

2004-07-09 Added dynamic_image_wxagg to examples - ADS

2004-07-09 added support for embedding TrueType fonts in PS files - PEB

2004-07-09 fixed a sfnt bug exposed if font cache is not built

2004-07-09 added default arg None to matplotlib.matlab grid command to
           toggle current grid state

2004-07-08 fixed a mathtext bug for '6'

2004-07-08 added some numarray bug workarounds

=======

2004-07-07 0.60 released

2004-07-07 Fixed a bug in dynamic_demo_wx


2004-07-07 backend_gtk.py: raise SystemExit immediately if 
	   'import pygtk' fails - SC

2004-07-05 Added new mathtext commands \over{sym1}{sym2} and
           \under{sym1}{sym2}

2004-07-05 Unified image and patch collections colormapping and
           scaling args.  Updated docstrings for all - JDH

2004-07-05 Fixed a figure legend bug and added
           examples/figlegend_demo.py - JDH

2004-07-01 Fixed a memory leak in image and agg to string methods

2004-06-25 Fixed fonts_demo spacing problems and added a kwargs
           version of the fonts_demo fonts_demo_kw.py - JDH

2004-06-25 finance.py: handle case when urlopen() fails - SC

2004-06-24 Support for multiple images on axes and figure, with